--- a/styles/modules/NavMenu.scss
+++ b/styles/modules/NavMenu.scss
@@ -1,9 +1,14 @@
 .navmenu-container {
   position: fixed;
   width: 100%;
+  max-width: 100vw;
   top: 0;
   left: 0;
   z-index: 2;
+
+  @media (max-width: 768px) {
+    position: relative;
+  }
 }
 
 .navmenu {
